# EEPlayer

./: settings.gradle
EEMODULE/: build.gradle
EEMODULE/src/androidTest/java/com/antymistor/eemodule/: ExampleInstrumentedTest.java
EEMODULE/src/main/java/com/antymistor/eemodule/base/: EEReturnCode.java
EEMODULE/src/main/java/com/antymistor/eemodule/decoderlib/: EEMediaCodecDecoder.java
EEMODULE/src/main/java/com/antymistor/eemodule/eeplayer/: EEMediaInfo.java  EEPlayer.java  EEPlayerBuildParam.java  EEPlayerSpConfig.java
EEMODULE/src/main/java/com/antymistor/eemodule/nativeport/: EENativePort.java
EEModule/: CMakeLists.txt
EEModule/src/main/: AndroidManifest.xml
EEModule/src/main/java/com/antymistor/eemodule/base/: EEReturnCode.java
EEModule/src/main/java/com/antymistor/eemodule/decoderlib/: EEMediaCodecDecoder.java
EEModule/src/main/java/com/antymistor/eemodule/eeplayer/: EEPlayer.java  EEPlayerBuildParam.java  EEPlayerSpConfig.java
EEModule/src/main/java/com/antymistor/eemodule/nativeport/: EENativePort.java
EEModule/src/main/java/com/antymistor/eemodule/sharedObj/: EESharedObj.java
EEModule/src/test/java/com/antymistor/eemodule/: ExampleUnitTest.java
EEModuleNative/jni/: com_antymistor_eemodule_nativeport_EENativePort.cpp  com_antymistor_eemodule_nativeport_EENativePort.h
EEModuleNative/src/: CMakeLists.txt  empty.cpp  empty.h
EEModuleNative/src/JNIEnv/: EEJNIEnv.cpp  EEJNIEnv.h
EEModuleNative/src/basedefine/: EECodeDefine.h  EEList.h  EEMatrix.cpp  EEMatrix.h
EEModuleNative/src/gl/: EEFrameBuffer.cpp  EEFrameBuffer.h  EEGLContext.cpp  EEGLContext.h  EEGLUtils.cpp  EEGLUtils.h  EETexture.cpp  EETexture.h
EEModuleNative/src/output/: EEAudioOutput.cpp  EEAudioOutput.h  EEOutput.cpp  EEOutput.h  EEOutputDefine.h  EEVideoOutput.cpp  EEVideoOutput.h
EEModuleNative/src/player/: EEPlayer.cpp  EEPlayer.h
EEModuleNative/src/reader/: EEMediaDefine.h  EEReader.cpp  EEReader.h
EEModuleNative/src/reader/decoder/: EEAudioDecoder.cpp  EEAudioDecoder.h  EEDecoder.h  EEMediaCodecDecoder.cpp  EEMediaCodecDecoder.h  EEVideoDecoder.cpp  EEVideoDecoder.h
EEModuleNative/src/reader/demuxer/: EEDemuxer.cpp  EEDemuxer.h
EEModuleNative/src/render/: EEGLProgram.cpp  EEGLProgram.h  EEGLShaderLib.cpp  EEGLShaderLib.h  EERender.cpp  EERender.h  EETextureCopyRender.cpp  EETextureCopyRender.h
EEModuleNative/src/shared/: EEShared.cpp  EEShared.h
EEModuleNative/src/sl/: EESLContext.cpp  EESLContext.h  EESLUtils.h
EEModuleNative/src/thread/: EETask.cpp  EETask.h  EETaskQueue.cpp  EETaskQueue.h
EEModuleNative/src/utils/: EECommonUtils.cpp  EECommonUtils.h  EEMmapUtils.cpp  EEMmapUtils.h  EETimeUtils.cpp  EETimeUtils.h
app/: build.gradle
app/src/androidTest/java/com/antymistor/eeplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/antymistor/eeplayer/: AlbumActivity.java  LaunchActivity.java  MediaPickAdapter.java  VideoPlayActivity.java
app/src/main/java/com/antymistor/eeplayer/utils/: BitmapResize.java  Permission.java  SearchFileProvider.java  SeekbarAdvance.java
app/src/main/res/drawable/: seekbar.xml
app/src/main/res/layout/: album_activity.xml  launch_activity.xml  pick_item.xml  videoplay_activity.xml
app/src/main/res/values/: strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/antymistor/eeplayer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
